# parsl-docking-tutorial

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: cr.yml  python-package.yml
data/: 1iep_ligand.pdbqt  1iep_receptor.pdbqt
docker/: Dockerfile  environment.yml
parsldock/: learn.py  workflow.py
parsldock/docking/: parallel.py  sequential.py
scripts/: set_element.tcl
tests/: conftest.py  learn_test.py  parallel_test.py  sequential_test.py  workflow_test.py
tutorial/: ParslDock.ipynb
